# haskell

./: .gitignore  CLAUDE.md  README.md  cabal.project  canna.hs  euler.hs  fastestPath.hs  foo.hs  functor.hs  haskell.cabal  hie.yaml  learnMe.hs  michael.hs  michael_v2.hs  module.hs  rpn.hs  todo.hs  todo.txt
.claude/: rules
app/aoc/2024/1/: aoc.hs
app/aoc/2025/1/: aoc.hs
app/aoc/2025/2/: aoc.hs
app/aoc/2025/3/: aoc.hs
app/aoc/2025/4/: aoc.hs
app/aoc/2025/5/: aoc.hs
app/aoc/2025/6/: aoc.hs
app/aoc/2025/7/: aoc.hs
app/aoc/2025/7.2/: aoc.hs
app/aoc/2025/8/: aoc.hs
app/aoc/2025/9/: Visualize.hs  aoc.hs
app/aoc/2025/9.2/: aoc.hs
app/aoc/2025/9.3/: about.md  aoc.hs  output.txt  output_save.txt
app/aoc/2025/9.4/: aoc.hs  output-mini.txt
app/functor/: knight.hs  monad.hs  monoid.hs  operations.hs
