cabal-version:      3.0
name:               haskell
version:            0.1.0.0
build-type:         Simple

executable 1
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5
    hs-source-dirs:   app/aoc/2025/1
    default-language: Haskell2010

executable 2
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5,
                      split
    hs-source-dirs:   app/aoc/2025/2
    default-language: Haskell2010
