cabal-version:      3.0
name:               haskell
version:            0.1.0.0
build-type:         Simple

executable 2024.1
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5
    hs-source-dirs:   app/aoc/2024/1
    default-language: Haskell2010

executable 1
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5
    hs-source-dirs:   app/aoc/2025/1
    default-language: Haskell2010

executable 2
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5,
                      split
    hs-source-dirs:   app/aoc/2025/2
    default-language: Haskell2010

executable 3
    main-is:          aoc.hs
    build-depends:    base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/3
    default-language: Haskell2010

executable 4
    main-is:          aoc.hs
    build-depends:    containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/4
    default-language: Haskell2010

executable 5
    main-is:          aoc.hs
    build-depends:    split ^>=0.2.5, text ^>=2.0.2, containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/5
    default-language: Haskell2010

executable 6
    main-is:          aoc.hs
    build-depends:    text ^>=2.0.2, split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/6
    default-language: Haskell2010

executable 7
    main-is:          aoc.hs
    build-depends:    text ^>=2.0.2, split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5, pretty-show ^>=1.10,
    hs-source-dirs:   app/aoc/2025/7
    default-language: Haskell2010

executable 7.2
    main-is:          aoc.hs
    build-depends:    vector ^>=0.13.2.0, text ^>=2.0.2, split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5, pretty-show ^>=1.10,
    hs-source-dirs:   app/aoc/2025/7.2
    default-language: Haskell2010

executable 7.3
    main-is:          aoc.hs
    build-depends:    vector ^>=0.13.2.0, text ^>=2.0.2, split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5, pretty-show ^>=1.10,
    hs-source-dirs:   app/aoc/2025/7.3
    default-language: Haskell2010

executable 8
    main-is:          aoc.hs
    build-depends:    split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/8
    default-language: Haskell2010

executable 9
    main-is:          aoc.hs
    build-depends:    split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/9
    default-language: Haskell2010

executable Viz
    main-is:          Visualize.hs
    build-depends:    split ^>=0.2.5, containers ^>=0.6.7, base >=4.16 && <5,
    hs-source-dirs:   app/aoc/2025/9
    default-language: Haskell2010
